# EQEmu-Monomyth-Client

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  HANDOFF.md  README.md  dinput8.def  framework-managed-paths.txt
.agents/: README.md
.agents/briefs/: codex-task-001-multiclass-identity-api.md  recon-001-spellbook-click-archaeology.md
.agents/reviews/: review-001-task-001-template.md
.agents/state/: mission.md
.agents/templates/: codex-brief-template.md  mission-template.md  recon-brief-template.md  review-template.md  spec-template.md
.github/scripts/: ai_adversarial_review.py
.github/workflows/: ci.yml
.kilo/plans/: arrow-ammo-equip-fix.md  multiclass-augmentation-override.md
docs/: custom-ui-dll-integration.md  handoff.md  multiclass-identity-intervention-map.md  multiclass-negative-results.md  thj-decompile-results.md
docs/cleanroom-dll-research/: character-members.txt  character-xtarget-deep-dive.txt  deep-dive.txt  discipline-window-0x659c00-analysis-2026-06-05.md  dll-documentation.md  eqgame-spell-ui-ghidra-notes.md  eqgame_agent_ingest_report_2026-05-18.txt  ghidra-survey.txt  notify-table.txt  objdump-p.txt  objdump-x.txt  strings.txt  target-string-addrs.txt  target-tlo-deep-dive.txt  type-symbols.txt  type-vtables.txt  type-vtables2.txt  window-string-addrs.txt  window-tlo-deep-dive.txt
docs/process/: local-policy.md  workflow-overview.md
docs/specs/: 2026-05-18-multiclass-identity-api-spec.md
graphify-out/: GRAPH_REPORT.md  graph.json
scripts/: bootstrap.sh  update-framework.sh  va_rva.py
src/: class_display_discovery.cpp  class_display_discovery.h  config.h  dinput_proxy.cpp  dinput_proxy.h  dllmain.cpp  fingerprint.cpp  fingerprint.h  hook_manager.cpp  hook_manager.h  logger.cpp  logger.h  monomyth_pet_window.cpp  monomyth_pet_window.h  multiclass_cache.cpp  multiclass_cache.h  multiclass_combat_ability.cpp  multiclass_combat_ability.h  multiclass_identity.cpp  multiclass_identity.h  multiclass_skill_visibility.cpp  multiclass_skill_visibility.h  multipet_spawn_observer.cpp  multipet_spawn_observer.h  opcode_reference.cpp  opcode_reference.h  packet_observer.cpp  packet_observer.h  receive_dispatch_discovery.cpp  receive_dispatch_discovery.h  remote_multiclass_identity.cpp  remote_multiclass_identity.h  remote_multipet_status.cpp  remote_multipet_status.h  runtime_capabilities.cpp  runtime_capabilities.h  server_auth_stats_observer.cpp  server_auth_stats_observer.h  spell_level_selection.cpp  spell_level_selection.h  (+5 more)
tests/: class_display_discovery_tests.cpp  multiclass_combat_ability_tests.cpp  multiclass_identity_tests.cpp  multiclass_skill_visibility_tests.cpp  multipet_spawn_observer_tests.cpp  remote_multiclass_identity_tests.cpp  remote_multipet_status_tests.cpp  runtime_capabilities_tests.cpp  server_auth_stats_observer_tests.cpp  spell_level_selection_tests.cpp  spell_usability_discovery_policy_tests.cpp
uifiles/default/: EQUI_Inventory.xml  EQUI_MonomythPetWindow.xml  EQUI_PlayerWindow.xml
worktrees/: README.md
